--- a/News/News/Views/Shared/_Layout.cshtml
+++ b/News/News/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/images/icons/favicon.png" />
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
@@ -31,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/site.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" href="~/plugin/themify-icons.css" />
+    <!--===============================================================================================-->
     <script src="https://kit.fontawesome.com/d58faeafe2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link href="~/plugin/sweetalert2.min.css" rel="stylesheet" />
