--- a/News/News/Views/News/Index.cshtml
+++ b/News/News/Views/News/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model VmNews
 @inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> _userManager;
+@inject AppDbContext _context
 @{
     ViewData["Title"] = "Index";
 }
@@ -144,37 +146,110 @@
                                         <img style="background-size: cover; background-position: center center; height: 225px; " src="~/Uploads/Images/News/@news.Image" alt="IMG">
                                     </a>
 
-                                    <span class="f1-s-3 cateBlog">
-                                        <span class="dis-block how1-child2 f1-s-5 cl0 bo-all-1 trans-03 p-rl-5 p-t-2" style="color:black; border-color: black; ">@news.Category.NewsCategory.Name</span>
-                                        @if (SignInManager.IsSignedIn(User))
-                                        {
-                                            <i class="@(news.SavedNews.Any(s=>s.UserId==ViewBag.UserId)==true?"fas added":"far")  fa-bookmark fa-2x blog-bookmarked" data-id="@news.Id"></i>
-                                        }
-
-                                    </span>
-                                    <div class="when"><div class="when-date"><div class="date-day">@news.AddedDate.Date.ToString("dd")</div><div class="date-month">@news.AddedDate.Date.ToString("MMM")</div><div class="date-year" style="display:none;">@news.AddedDate.Date.ToString("yyyy")</div></div><div class="when-time">@news.AddedDate.ToString("HH:mm")</div></div>
-
-                                    <div class="p-t-16">
-                                        <h5 class="p-b-5">
-                                            <a href="blog-detail-01.html" class="f1-m-3 cl2 hov-cl10 trans-03">
-                                                @news.Title
-                                            </a>
-                                        </h5>
-
-                                        <span class="cl8">
-                                            <a href="#" class="f1-s-4 cl8 hov-cl10 trans-03">
-                                                by @news.User.Name @news.User.Surname
-                                            </a>
-
-                                            <span class="f1-s-3 m-rl-3">
-                                                -
+                                    <div class="news-content">
+                                        <span class="f1-s-3 cateBlog">
+                                            <span class="dis-block how1-child2 f1-s-5 cl0 bo-all-1 trans-03 p-rl-5 p-t-2"
+                                                  style="color: #aaaaaa; border-color: #aaaaaa; ">
+                                                @news.Category.NewsCategory.Name
                                             </span>
+                                            @if (SignInManager.IsSignedIn(User))
+                                            {
+                                                <i class="@(news.SavedNews.Any(s => s.UserId == ViewBag.UserId) == true ? "fas added" : "far")  fa-bookmark fa-2x blog-bookmarked" data-id="@news.Id"></i>
+                                            }
 
-                                            <span class="f1-s-3">
-                                                @news.AddedDate.Date.ToString("dd MMMM yyyy")
-                                            </span>
                                         </span>
+
+                                        <div class="when">
+                                            <div class="when-date">
+                                                <div class="date-day">@news.AddedDate.Date.ToString("dd")</div>
+                                                <div class="date-month">@news.AddedDate.Date.ToString("MMM")</div>
+                                                <div class="date-year" style="display:none;">
+                                                    @news.AddedDate.Date.ToString("yyyy")
+                                                </div>
+                                            </div>
+                                            <div class="when-time">@news.AddedDate.ToString("HH:mm")</div>
+                                        </div>
+
+
+                                        <div class="p-t-16">
+                                            <h5 class="p-b-5 m-2">
+                                                <a href="blog-detail-01.html" class="f1-m-3 cl2 hov-cl10 trans-03">
+                                                    @news.Title
+                                                </a>
+                                            </h5>
+
+                                            @{
+                                                var userId = _userManager.GetUserId(User);
+
+                                                List<LikeAndDislike> LikeCount = _context.LikeAndDislikes.Where(aa => aa.NewsId == news.Id && aa.LikeAndDislikeStatus==LikeAndDislikeStatus.Like).ToList();
+                                                List<LikeAndDislike> DislikeCount = _context.LikeAndDislikes.Where(aa => aa.NewsId == news.Id && aa.LikeAndDislikeStatus==LikeAndDislikeStatus.Dislike).ToList();
+                                                List<LikeAndDislike> LikeIcon = _context.LikeAndDislikes.Where(aa => aa.NewsId == news.Id && aa.UserId == userId && aa.LikeAndDislikeStatus==LikeAndDislikeStatus.Like).ToList();
+                                                List<LikeAndDislike> DislikeIcon = _context.LikeAndDislikes.Where(aa => aa.NewsId == news.Id && aa.UserId == userId && aa.LikeAndDislikeStatus==LikeAndDislikeStatus.Dislike).ToList();
+
+                                                var Likecount = LikeCount.Count;
+                                                var Dislikecount = DislikeCount.Count;
+
+                                                var aa = 0;
+                                                var bb = "";
+                                                var cc = "";
+
+                                                foreach (var likeicon in LikeIcon)
+                                                {
+                                                    aa =  (int)likeicon.LikeAndDislikeStatus;
+
+                                                    if (aa==1)
+                                                    {
+                                                        bb = "like-added";
+                                                    }
+                                                    else
+                                                    {
+                                                        bb = "";
+                                                    }
+
+                                                }
+
+                                                foreach (var dislikeicon in DislikeIcon)
+                                                {
+                                                    aa = (int)dislikeicon.LikeAndDislikeStatus;
+
+                                                    if (aa == 2)
+                                                    {
+                                                        cc = "dislike-added";
+                                                    }
+                                                    else
+                                                    {
+                                                        cc = "";
+                                                    }
+
+                                                }
+
+
+                                            }
+
+                                            <div class="stats">
+                                                <div class="stats-i-container stats-like-active stats_likes @(SignInManager.IsSignedIn(User)==true?"news-like":"like-hover")  @bb"
+                                                     data-id="@news.Id"
+                                                     data-likecount="@Likecount">
+
+                                                    <span class="stats-i">
+                                                        <i class="fas fa-thumbs-up likeCount">@Likecount</i>
+                                                    </span>
+                                                </div>
+                                                <div class="stats-i-container stats-like-active stats_dislikes @(SignInManager.IsSignedIn(User)==true?"news-dislike":"dislike-hover") @cc"
+                                                     data-id="@news.Id"
+                                                     data-dislikecount="@Dislikecount">
+                                                    <span class="stats-i"><i class="fas fa-thumbs-down dislikeCount"></i>@Dislikecount</span>
+                                                </div>
+                                                <div class="stats-i-container stats_views">
+                                                    <span class="stats-i"><i class="fas fa-eye"></i> 111</span>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
                                     </div>
+
+
                                 </div>
                             </div>
                         }
