--- a/News/News/Views/News/Details.cshtml
+++ b/News/News/Views/News/Details.cshtml
@@ -1,6 +1,9 @@
-﻿
+﻿@model VmNews
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> _userManager;
+@inject AppDbContext _context
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "News Details";
 }
 
 
@@ -8,37 +11,105 @@
 <!-- Content -->
 <section class="bg0 p-b-70 p-t-5">
     <!-- Title -->
-    <div class="bg-img1 size-a-18 how-overlay1" style="background-image: url(@Url.Content("~/images/blog-detail-01.jpg"))">
+    <div class="bg-img1 container p-t-82 size-a-18 how-overlay1" style="background-image: url(@Url.Content("~/Uploads/Images/News/"+Model.New.Image))">
         <div class="container h-full flex-col-e-c p-b-58">
-            <a href="#" class="f1-s-10 cl0 hov-cl10 trans-03 text-uppercase txt-center m-b-33">
-                Technology
+            <a asp-controller="news" asp-action="index" asp-route-id="@Model.New.Category.NewsCategory.Id" class="f1-s-10 cl0 hov-cl10 trans-03 text-uppercase txt-center m-b-33">
+                @Model.New.Category.NewsCategory.Name
             </a>
 
             <h3 class="f1-l-5 cl0 p-b-16 txt-center respon2">
-                Nulla non interdum metus non laoreet nisi tellus eget aliquam lorem pellentesque
+                @Model.New.Title
             </h3>
 
-            <div class="flex-wr-c-s">
-                <span class="f1-s-3 cl8 m-rl-7 txt-center">
-                    <a href="#" class="f1-s-4 cl8 hov-cl10 trans-03">
-                        by John Alvarado
-                    </a>
 
-                    <span class="m-rl-3">-</span>
+            @{
+                var userId = _userManager.GetUserId(User);
 
-                    <span>
-                        Feb 18
-                    </span>
-                </span>
+                List<LikeAndDislike> LikeCount = _context.LikeAndDislikes.Where(aa => aa.NewsId == Model.New.Id && aa.LikeAndDislikeStatus == LikeAndDislikeStatus.Like).ToList();
+                List<LikeAndDislike> DislikeCount = _context.LikeAndDislikes.Where(aa => aa.NewsId == Model.New.Id && aa.LikeAndDislikeStatus == LikeAndDislikeStatus.Dislike).ToList();
+                List<LikeAndDislike> LikeIcon = _context.LikeAndDislikes.Where(aa => aa.NewsId == Model.New.Id && aa.UserId == userId && aa.LikeAndDislikeStatus == LikeAndDislikeStatus.Like).ToList();
+                List<LikeAndDislike> DislikeIcon = _context.LikeAndDislikes.Where(aa => aa.NewsId == Model.New.Id && aa.UserId == userId && aa.LikeAndDislikeStatus == LikeAndDislikeStatus.Dislike).ToList();
 
-                <span class="f1-s-3 cl8 m-rl-7 txt-center">
-                    5239 Views
-                </span>
+                var Likecount = LikeCount.Count;
+                var Dislikecount = DislikeCount.Count;
 
-                <a href="" class="f1-s-3 cl8 m-rl-7 txt-center hov-cl10 trans-03">
-                    0 Comment
-                </a>
+                var aa = 0;
+                var bb = "";
+                var cc = "";
+
+                foreach (var likeicon in LikeIcon)
+                {
+                    aa = (int)likeicon.LikeAndDislikeStatus;
+
+                    if (aa == 1)
+                    {
+                        bb = "like-added";
+                    }
+                    else
+                    {
+                        bb = "";
+                    }
+
+                }
+
+                foreach (var dislikeicon in DislikeIcon)
+                {
+                    aa = (int)dislikeicon.LikeAndDislikeStatus;
+
+                    if (aa == 2)
+                    {
+                        cc = "dislike-added";
+                    }
+                    else
+                    {
+                        cc = "";
+                    }
+
+                }
+
+
+            }
+
+            <div class="when" style="margin-left:unset; max-width:unset;">
+                <div class="when-date">
+                    <div class="date-day">@Model.New.AddedDate.Date.ToString("dd")</div>
+                    <div class="date-month">@Model.New.AddedDate.Date.ToString("MMM")</div>
+                    <div class="date-year" style="display:none;">
+                        @Model.New.AddedDate.Date.ToString("yyyy")
+                    </div>
+                </div>
+                <div class="when-time">@Model.New.AddedDate.ToString("HH:mm")</div>
             </div>
+
+            <style>
+                .like-added:hover {
+                    background: #334564;
+                }
+
+                .dislike-added:hover {
+                    background: #334564;
+                }
+            </style>
+            <div class="stats statsDetails">
+                <div class="statsDetailsLike stats-i-container stats-like-active stats_likes @(SignInManager.IsSignedIn(User)==true?"news-like":"like-hover")  @bb"
+                     data-id="@Model.New.Id"
+                     data-likecount="@Likecount">
+
+                    <span class="stats-i">
+                        <i class="fas fa-thumbs-up likeCount">@Likecount</i>
+                    </span>
+                </div>
+                <div class="statsDetailsLike stats-i-container stats-like-active stats_dislikes @(SignInManager.IsSignedIn(User)==true?"news-dislike":"dislike-hover") @cc"
+                     data-id="@Model.New.Id"
+                     data-dislikecount="@Dislikecount">
+                    <span class="stats-i"><i class="fas fa-thumbs-down dislikeCount"></i>@Dislikecount</span>
+                </div>
+                <div style="border-top-right-radius: 11px;" class="statsDetailsLike stats-i-container stats_views">
+                    <span class="stats-i"><i class="fas fa-eye"></i> 111</span>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
@@ -50,15 +121,7 @@
                     <!-- Blog Detail -->
                     <div class="p-b-70">
                         <p class="f1-s-11 cl6 p-b-25">
-                            Curabitur volutpat bibendum molestie. Vestibulum ornare gravida semper. Aliquam a dui suscipit, fringilla metus id, maximus leo. Vivamus sapien arcu, mollis eu pharetra vitae, condimentum in orci. Integer eu sodales dolor. Maecenas elementum arcu eu convallis rhoncus. Donec tortor sapien, euismod a faucibus eget, porttitor quis libero.
-                        </p>
-
-                        <p class="f1-s-11 cl6 p-b-25">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet est vel orci luctus sollicitudin. Duis eleifend vestibulum justo, varius semper lacus condimentum dictum. Donec pulvinar a magna ut malesuada. In posuere felis diam, vel sodales metus accumsan in. Duis viverra dui eu pharetra pellentesque. Donec a eros leo. Quisque sed ligula vitae lorem efficitur faucibus. Praesent sit amet imperdiet ante. Nulla id tellus auctor, dictum libero a, malesuada nisi. Nulla in porta nibh, id vestibulum ipsum. Praesent dapibus tempus erat quis aliquet. Donec ac purus id sapien condimentum feugiat.
-                        </p>
-
-                        <p class="f1-s-11 cl6 p-b-25">
-                            Praesent vel mi bibendum, finibus leo ac, condimentum arcu. Pellentesque sem ex, tristique sit amet suscipit in, mattis imperdiet enim. Integer tempus justo nec velit fringilla, eget eleifend neque blandit. Sed tempor magna sed congue auctor. Mauris eu turpis eget tortor ultricies elementum. Phasellus vel placerat orci, a venenatis justo. Phasellus faucibus venenatis nisl vitae vestibulum. Praesent id nibh arcu. Vivamus sagittis accumsan felis, quis vulputate
+                            @Html.Raw(Model.New.Content)
                         </p>
 
                         <!-- Tag -->
@@ -68,18 +131,18 @@
                             </span>
 
                             <div class="flex-wr-s-s size-w-0">
-                                <a href="#" class="f1-s-12 cl8 hov-link1 m-r-15">
-                                    Streetstyle
-                                </a>
+                                @foreach (NewsTag tag in Model.Tags)
+                                {
+                                    <a asp-controller="news" asp-action="index" asp-route-tagId="@tag.Id" class="f1-s-12 cl8 hov-link1 m-r-15">
+                                        @tag.Name
+                                    </a>
+                                }
 
-                                <a href="#" class="f1-s-12 cl8 hov-link1 m-r-15">
-                                    Crafts
-                                </a>
                             </div>
                         </div>
 
                         <!-- Share -->
-                        <div class="flex-s-s">
+                        @*<div class="flex-s-s">
                             <span class="f1-s-12 cl5 p-t-1 m-r-15">
                                 Share:
                             </span>
@@ -105,7 +168,7 @@
                                     Pinterest
                                 </a>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
 
                     <!-- Leave a comment -->
@@ -136,13 +199,126 @@
             </div>
 
             <div class="col-md-10 col-lg-4 p-b-100">
-                <div class="p-l-10 p-rl-0-sr991">
-                    <!-- Banner -->
-                    <div class="flex-c-s">
-                        <a href="#">
-                            <img class="max-w-full" src="~/images/banner-02.jpg" alt="IMG">
-                        </a>
+                <div class="p-l-10 p-rl-0-sr991 ">
+                    <!-- Category -->
+                    <div class="p-b-60">
+                        <div class="how2 how2-cl4 flex-s-c">
+                            <h3 class="f1-m-2 cl3 tab01-title">
+                                Category
+                            </h3>
+                        </div>
+
+                        <ul class="p-t-35 p-l-0">
+                            @foreach (var item in Model.Categories)
+                            {
+                                ViewBag.categoryId = Model.New.Category.NewsCategory.Id;
+
+                                <li class="p-rl-4  @(ViewBag.categoryId == item.Id?"item-active":"item-cate")">
+                                    <a asp-controller="news" asp-action="index" asp-route-id="@item.Id" class="dis-block f1-s-10 text-uppercase cl2 hov-cl10 trans-03 p-tb-13">
+                                        @item.Name <span style=" position: absolute; right: 25px;">@item.NewsSubCategories.Sum(d => d.News.Count())</span>
+                                    </a>
+                                </li>
+                            }
+                        </ul>
                     </div>
+
+
+                    <!-- Popular Posts -->
+                    <div class="p-b-30">
+                        <div class="how2 how2-cl4 flex-s-c">
+                            <h3 class="f1-m-2 cl3 tab01-title">
+                                Popular Post
+                            </h3>
+                        </div>
+
+                        <ul class="p-t-35 p-l-0">
+                            <li class="flex-wr-sb-s p-b-30">
+                                <a href="#" class="size-w-10 wrap-pic-w hov1 trans-03">
+                                    <img src="images/popular-post-04.jpg" alt="IMG">
+                                </a>
+
+                                <div class="size-w-11">
+                                    <h6 class="p-b-4">
+                                        <a href="blog-detail-02.html" class="f1-s-5 cl3 hov-cl10 trans-03">
+                                            Donec metus orci, malesuada et lectus vitae
+                                        </a>
+                                    </h6>
+
+                                    <span class="cl8 txt-center p-b-24">
+                                        <a href="#" class="f1-s-6 cl8 hov-cl10 trans-03">
+                                            Music
+                                        </a>
+
+                                        <span class="f1-s-3 m-rl-3">
+                                            -
+                                        </span>
+
+                                        <span class="f1-s-3">
+                                            Feb 18
+                                        </span>
+                                    </span>
+                                </div>
+                            </li>
+
+                            <li class="flex-wr-sb-s p-b-30">
+                                <a href="#" class="size-w-10 wrap-pic-w hov1 trans-03">
+                                    <img src="images/popular-post-05.jpg" alt="IMG">
+                                </a>
+
+                                <div class="size-w-11">
+                                    <h6 class="p-b-4">
+                                        <a href="blog-detail-02.html" class="f1-s-5 cl3 hov-cl10 trans-03">
+                                            Donec metus orci, malesuada et lectus vitae
+                                        </a>
+                                    </h6>
+
+                                    <span class="cl8 txt-center p-b-24">
+                                        <a href="#" class="f1-s-6 cl8 hov-cl10 trans-03">
+                                            Game
+                                        </a>
+
+                                        <span class="f1-s-3 m-rl-3">
+                                            -
+                                        </span>
+
+                                        <span class="f1-s-3">
+                                            Feb 16
+                                        </span>
+                                    </span>
+                                </div>
+                            </li>
+
+                            <li class="flex-wr-sb-s p-b-30">
+                                <a href="#" class="size-w-10 wrap-pic-w hov1 trans-03">
+                                    <img src="images/popular-post-06.jpg" alt="IMG">
+                                </a>
+
+                                <div class="size-w-11">
+                                    <h6 class="p-b-4">
+                                        <a href="blog-detail-02.html" class="f1-s-5 cl3 hov-cl10 trans-03">
+                                            Donec metus orci, malesuada et lectus vitae
+                                        </a>
+                                    </h6>
+
+                                    <span class="cl8 txt-center p-b-24">
+                                        <a href="#" class="f1-s-6 cl8 hov-cl10 trans-03">
+                                            Celebrity
+                                        </a>
+
+                                        <span class="f1-s-3 m-rl-3">
+                                            -
+                                        </span>
+
+                                        <span class="f1-s-3">
+                                            Feb 12
+                                        </span>
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+
                 </div>
             </div>
         </div>
