--- a/News/News/wwwroot/css/site.css
+++ b/News/News/wwwroot/css/site.css
@@ -577,6 +577,32 @@ label {
         color: #DC0000;
     }
 
+.item-cate {
+    border-left: 3px solid #AAAAAA;
+    padding-left: 15px;
+}
+.item-active {
+    border-left: 3px solid #00997d;
+    padding-left: 15px;
+}
+
+
+
+.statsDetails {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 45%;
+    border: unset;
+    opacity: 0.9;
+}
+
+.statsDetailsLike {
+    border: unset;
+    background-color: #334564;
+}
+    
+
 /*Layouts*/
 .main-menu > .li-home > a::after {
     display: none;
