--- a/News/News/Views/Account/Login.cshtml
+++ b/News/News/Views/Account/Login.cshtml
@@ -33,5 +33,10 @@
     </div>
 </form>
 
+<div style="width:50%; margin: 0 auto;">
+    @await Component.InvokeAsync("ExternalLogin")
+</div>
+
+
 
 <script src="~/js/login.js"></script>
