--- a/News/News/Views/Account/Register.cshtml
+++ b/News/News/Views/Account/Register.cshtml
@@ -66,5 +66,9 @@
     </div>
 </form>
 
+<div style="width:50%; margin: 0 auto;">
+    @await Component.InvokeAsync("ExternalLogin")
+</div>
+
 
 <script src="~/js/login.js"></script>
