Category Edit and Socials added

--- a/News/News/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/News/News/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -214,6 +214,19 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link" data-toggle="collapse" href="#socials" aria-expanded="false" aria-controls="socials">
+                                <i class="fas fa-share-alt-square menu-icon"></i>
+                                <span class="menu-title">Socials</span>
+                                <span class="badge badge-success">1</span>
+                            </a>
+                            <div class="collapse" id="socials">
+                                <ul class="nav flex-column sub-menu">
+                                    <li class="nav-item"> <a class="nav-link" asp-controller="social" asp-action="index"> Socials</a></li>
+                                </ul>
+                            </div>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
                                 <i class="icon-user menu-icon"></i>
                                 <span class="menu-title">Roles</span>
