--- a/News/News/Views/Shared/_Layout.cshtml
+++ b/News/News/Views/Shared/_Layout.cshtml
@@ -78,25 +78,7 @@
                     </div>
 
                     <div class="right-topbar">
-                        <a href="#">
-                            <span class="fab fa-facebook-f"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-twitter"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-pinterest-p"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-vimeo-v"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-youtube"></span>
-                        </a>
+                        @await Component.InvokeAsync("Social")
                     </div>
                 </div>
             </div>
@@ -148,25 +130,7 @@
                     </li>
 
                     <li class="right-topbar">
-                        <a href="#">
-                            <span class="fab fa-facebook-f"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-twitter"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-pinterest-p"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-vimeo-v"></span>
-                        </a>
-
-                        <a href="#">
-                            <span class="fab fa-youtube"></span>
-                        </a>
+                        @await Component.InvokeAsync("Social")
                     </li>
                 </ul>
 
@@ -339,25 +303,7 @@
                             </p>
 
                             <div class="p-t-15">
-                                <a href="#" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
-                                    <span class="fab fa-facebook-f"></span>
-                                </a>
-
-                                <a href="#" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
-                                    <span class="fab fa-twitter"></span>
-                                </a>
-
-                                <a href="#" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
-                                    <span class="fab fa-pinterest-p"></span>
-                                </a>
-
-                                <a href="#" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
-                                    <span class="fab fa-vimeo-v"></span>
-                                </a>
-
-                                <a href="#" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
-                                    <span class="fab fa-youtube"></span>
-                                </a>
+                                @await Component.InvokeAsync("Social")
                             </div>
                         </div>
                     </div>
@@ -426,45 +372,10 @@
                         </ul>
                     </div>
 
-                    <div class="col-sm-6 col-lg-4 p-b-20">
-                        <div class="size-h-3 flex-s-c">
-                            <h5 class="f1-m-7 cl0">
-                                Category
-                            </h5>
-                        </div>
+                    @*Footer Categories*@
 
-                        <ul class="m-t--12">
-                            <li class="how-bor1 p-rl-5 p-tb-10">
-                                <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03 p-tb-8">
-                                    Fashion (22)
-                                </a>
-                            </li>
+                    @await Component.InvokeAsync("FooterCategories")
 
-                            <li class="how-bor1 p-rl-5 p-tb-10">
-                                <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03 p-tb-8">
-                                    Technology (29)
-                                </a>
-                            </li>
-
-                            <li class="how-bor1 p-rl-5 p-tb-10">
-                                <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03 p-tb-8">
-                                    Street Style (15)
-                                </a>
-                            </li>
-
-                            <li class="how-bor1 p-rl-5 p-tb-10">
-                                <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03 p-tb-8">
-                                    Life Style (28)
-                                </a>
-                            </li>
-
-                            <li class="how-bor1 p-rl-5 p-tb-10">
-                                <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03 p-tb-8">
-                                    DIY & Crafts (16)
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
